Ingress_test/ingress-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
       app: frontend
  template:
    metadata:
       labels:
         app: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        command: ["sh", "-c", "echo VERSION 1.0 desde $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
---
apiVersion: v1
kind: Service
metadata:
  name: app-v1
  labels:
    app: frontend
spec:
  type: ClusterIP 
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
